tests/src/frontend/expand/invalid/macro_extends.sk
class C{} extends #T {}

fun main(): void {
  void
}
